Emplemented correct sizes, alignement and base for footer

--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,19 @@ header {
 .main-content {
   box-shadow: white 0px 0px 11px;
   background-color: #fff;
-  height: 235vh;
+  height: 210vh;
   width: 100%;
   position: relative;
   margin-top: 100vh;
   z-index: 2;
+}
+
+footer {
+  background-color: #434343;
+  height: 50vh;
+  width: 100%;
+  position: relative;
+  z-index: 3;
 }
 
 .hidden {
